fixed mobile menu overlapping

--- a/src/styles/activities.css
+++ b/src/styles/activities.css
@@ -78,7 +78,7 @@
     max-width: 600px;
     margin: auto;
 
-    border-radius: 4px;
+    border-radius: 8px;
 
     display: flex;
     flex-direction: column;
@@ -196,14 +196,17 @@
     }
     #selectors {
         position: fixed;
-        top: -100%;
-        transition: 200ms;
+        top: 0.5rem;
+        left: 4rem;
     }
-    #selectors:hover #drawer-menu-icon {
-        top: -100%;
+    #selectors .activity-tab-button-wrapper {
+        transform-origin: top left;
+        transform: scale(0);
+        transition: 200ms ease-out;
     }
-    #selectors:hover {
-        top: 0%;
+    #selectors:hover .activity-tab-button-wrapper{
+        transform: scale(1);
+        transition: 200ms ease-in;
     }
 
     .drawer {
